--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,6 +3,8 @@ name = "playwright-http-proxy"
 version = "0.1.0"
 description = "Add your description here"
 readme = "README.md"
+license = "AGPL-3.0-only"
+license-files = ["LICEN[CS]E*"]
 requires-python = ">=3.13"
 dependencies = [
     "argparse>=1.4.0",
